[package]
name = "zino"
version = "0.1.0"
edition = "2021"
authors = ["batman8245"]
description = "A desktop companion app inspired by Shimeji-EE"

[dependencies]
winit = "0.29"
wgpu = "0.19"
wgpu-core = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
rodio = "0.17"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1